--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\SUPERTOM\\.conda\\envs\\TableOrder\\python.exe"
+    "python.pythonPath": "C:\\Users\\SUPERTOM\\.conda\\envs\\TableOrder\\python.exe",
+    "workbench.colorTheme": "One Dark Pro"
 }
