--- a/api/setting/flask.yaml
+++ b/api/setting/flask.yaml
@@ -1,5 +1,6 @@
 Login: sa
 Password: 1689
-ServerName: 192.168.1.187
-DBName: Monster
+ServerName: 192.168.1.4
+DBName: GONGCHA
 StoreName: bbqhot
+Debug: True
