--- a/api/setting/flask.yaml
+++ b/api/setting/flask.yaml
@@ -1,7 +1,7 @@
 Login: sa
 Password: 1689
 ServerName: 172.16.11.251
-DBName: Dolar
-StoreName: bbqhot
+DBName: Jackpot
+StoreName: jackpothotpot
 Debug: True
-Version: 1.22
+Version: 1.25c
