--- a/api/setting/flask.yaml
+++ b/api/setting/flask.yaml
@@ -1,9 +1,9 @@
 Login: sa
 Password: 1689
-ServerName: 172.16.11.241
+ServerName:
 DBName: Jackpot
 StoreName: jackpothotpot
 Debug: True
 PiselUrl: https://etest.pisel.com.au
 PiselSecret: MTORFFCRyzx6856xDl
-Version: 1.27
+Version: 1.28
