--- a/api/setting/flask.yaml
+++ b/api/setting/flask.yaml
@@ -2,8 +2,10 @@ Login: sa
 Password: 1689
 ServerName: 192.168.1.135
 ImageUrl:
-DBName: jackpot
+DBName: takasushi
 StoreName: jackpot
 Debug: True
 #PiselUrl: https://etest.pisel.com.au
-Version: 1.35.1
+Version: 1.36.0
+Pay@table: False
+Port:
