--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
 __pycache__/
-build/
-dist/
-*.spec
-*.dll
 .idea/
 .vscode/
 *.pyo
-api/errors.log
-api/log/errors.log
-api/testing.py
+packing/dist/
+packing/build/
